--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,6 @@
-spring:
-  application: 
-     name: 
+eureka:
+    client:
+      register-with-eureka: true
+      fetch-registry: true
+    instance:
+      prefer-ip-address: true
