--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,10 @@
+spring:
+  application:
+    name: Dev-Config-Default
 
+eureka:
+    client:
+      register-with-eureka: true
+      fetch-registry: true
+    instance:
+      prefer-ip-address: true
